# Incubator2020

./: .gitignore  README.md  environment-dev.yml  environment.yml  myscript  pyproject.toml
.github/workflows/: ci.yaml  cronjob.yaml  master.yaml  pullrequest.yaml
catalog/: find_LFEs.py
data/templates/080326.08.015/: KCPB.pkl
examples/: cronscript.sh  myscript.py
examples/templates/080326.08.015/: GFC.pkl  GHL.pkl  HOPS.pkl
examples/templates/080421.14.048/: KRMB.pkl  KSXB.pkl  YBH.pkl
lfelib/: __init__.py  find_LFEs.py  find_all_LFEs.py  get_responses.py  lfe.py  lfe_all.py  myscript.py  plot_catalogs.py  response.py
lfelib/data/: __init__.py  families_permanent.txt  station_locations.txt  stations_permanent.txt
lfelib/data/response/: BK_WDC.xml  NC_GSN.xml
lfelib/data/templates/080326.08.015/: GSN.pkl  GWR.pkl
lfelib/data/templates/080421.14.048/: KHBB.pkl  WDC.pkl
lfelib/utils/: __init__.py  get_data.py
presentation/: Incubator2020.aux  Incubator2020.nav  Incubator2020.out  Incubator2020.tex  Incubator2020.toc  Incubator2020.vrb  LFE_location.eps  Text.pages  catalog_2007_2009.eps
src/: find_LFEs.py
tests/: __init__.py  families_permanent.txt  station_locations.txt  stations_permanent.txt  test_commands.py  test_lfelib.py  test_utils.py
tests/data/response/: NC_GCK.xml  NC_GFC.xml
tests/examples/response/: PB_B039.xml
tests/examples/templates/080326.08.015/: GCK.pkl
tests/templates/080421.14.048/: B039.pkl
